--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,7 @@
             "name": "Andrii Navrotskii"
         }
     ],
-    "require": {}
+    "require": {
+        "symfony/dependency-injection": "^6.3"
+    }
 }
