--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         }
     ],
     "require": {
-        "symfony/dependency-injection": "^6.3"
+        "symfony/dependency-injection": "^6.3",
+        "symfony/config": "^6.3",
+        "symfony/yaml": "^6.3"
     }
 }
