--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "symfony/dependency-injection": "^6.3",
         "symfony/config": "^6.3",
-        "symfony/yaml": "^6.3"
+        "symfony/yaml": "^6.3",
+        "symfony/cache": "^6.3"
     }
 }
