--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,3 +1,5 @@
+# CR: Не знаю як працює Symfony, але на мою думку, краще була б явна регістрація залежностей використовуючи PHP замість неявної в форматі YML, особливо в проекті такого розміру.
+
 services:
   _defaults:
     autowire: true
